[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/Head/Head1.png" type="Texture" id=1]
[ext_resource path="res://assets/Body/Male/Male_Body1.png" type="Texture" id=2]
[ext_resource path="res://assets/Clothes/Male/Male_Clothes1.png" type="Texture" id=3]
[ext_resource path="res://Character.gd" type="Script" id=4]
[ext_resource path="res://assets/Icons/Boy_Icon.png" type="Texture" id=5]
[ext_resource path="res://assets/Icons/Girl_Icon.png" type="Texture" id=6]
[ext_resource path="res://assets/Face/Male/Male_Face1.png" type="Texture" id=7]
[ext_resource path="res://assets/Hair/Hair1.png" type="Texture" id=8]
[ext_resource path="res://assets/Background/Screen_Frame.png" type="Texture" id=9]
[ext_resource path="res://assets/Fonts/glossy_sheen/Glossy Sheen Shine DEMO.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/Icons/Dice_Icon.png" type="Texture" id=11]
[ext_resource path="res://assets/Icons/Clothes_Icon.png" type="Texture" id=12]
[ext_resource path="res://assets/Icons/Face_Icon.png" type="Texture" id=13]
[ext_resource path="res://assets/Icons/Hair_Icon.png" type="Texture" id=14]
[ext_resource path="res://Color_Options.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Character" type="Node2D"]
position = Vector2( 40, 64 )
script = ExtResource( 4 )

[node name="Sprites" type="Node2D" parent="."]

[node name="Body" type="Sprite" parent="Sprites" groups=["Persist"]]
position = Vector2( 152, 232 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Clothes" type="Sprite" parent="Sprites" groups=["Persist"]]
position = Vector2( 152, 232 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Head" type="Sprite" parent="Sprites" groups=["Persist"]]
position = Vector2( 152, 232 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Face" type="Sprite" parent="Sprites" groups=["Persist"]]
position = Vector2( 152, 232 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="Hair" type="Sprite" parent="Sprites" groups=["Persist"]]
position = Vector2( 152, 232 )
scale = Vector2( 4, 4 )
texture = ExtResource( 8 )

[node name="Color_Values" type="Node" parent="Sprites"]

[node name="Color_Icons" type="Node" parent="Sprites"]

[node name="ChangeFace" type="Button" parent="."]
margin_left = 72.0
margin_top = 472.0
margin_right = 144.0
margin_bottom = 552.0
icon = ExtResource( 13 )
icon_align = 1
expand_icon = true

[node name="ChangeClothes" type="Button" parent="."]
margin_left = 160.0
margin_top = 472.0
margin_right = 232.0
margin_bottom = 552.0
icon = ExtResource( 12 )
icon_align = 1

[node name="MaleButton" type="Button" parent="."]
margin_top = 192.0
margin_right = 44.0
margin_bottom = 230.0
icon = ExtResource( 5 )
icon_align = 1

[node name="FemaleButton" type="Button" parent="."]
margin_top = 240.0
margin_right = 44.0
margin_bottom = 278.0
icon = ExtResource( 6 )

[node name="ChangeHair" type="Button" parent="."]
margin_left = -16.0
margin_top = 472.0
margin_right = 56.0
margin_bottom = 552.0
icon = ExtResource( 14 )
icon_align = 1
expand_icon = true

[node name="Color_Options" parent="ChangeHair" instance=ExtResource( 15 )]
position = Vector2( 40, -52 )

[node name="Save" type="Button" parent="." groups=["Persist"]]
margin_left = 216.0
margin_top = -32.0
margin_right = 309.0
margin_bottom = 4.0
custom_colors/font_color = Color( 1, 0.498039, 0.498039, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 3 )
text = "Save"
flat = true

[node name="Background" type="Sprite" parent="."]
position = Vector2( -40, -64 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )
centered = false

[node name="Randomize" type="Button" parent="."]
margin_left = -16.0
margin_top = 96.0
margin_right = 70.0
margin_bottom = 168.0
custom_styles/focus = SubResource( 2 )
icon = ExtResource( 11 )
flat = true
expand_icon = true

[connection signal="pressed" from="ChangeFace" to="." method="_on_ChangeFace_pressed"]
[connection signal="pressed" from="ChangeClothes" to="." method="_on_ChangeClothes_pressed"]
[connection signal="pressed" from="MaleButton" to="." method="_on_MaleButton_pressed"]
[connection signal="pressed" from="FemaleButton" to="." method="_on_FemaleButton_pressed"]
[connection signal="pressed" from="ChangeHair" to="." method="_on_ChangeHair_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Randomize" to="." method="_on_Randomize_pressed"]
